Simplify auth flow, drop redundant queries, tune stats/indexes
- Introduce AppUserDetails carrying the User entity so controllers can
  read the caller via @AuthenticationPrincipal instead of re-querying
  by username on every authenticated request
- Add AppUserDetails.canAccess(rental) to replace duplicated
  admin-or-owner authorization checks
- Login reads the role from the typed principal instead of stripping
  the "ROLE_" prefix from a GrantedAuthority string
- Register drops the pre-findByUsername check and relies on the UNIQUE
  constraint via DataIntegrityViolationException
- SeedingService queries customers via findAllByRole instead of
  loading every user and filtering in memory
- Replace hand-rolled clamping with Math.clamp
- Override ItemRentalRepository.findById with @EntityGraph so the
  show/update/cancel/updates endpoints don't lazy-load user/item
- Add @Index on ItemRentalUpdate(rental_id, createdAt) and createdAt,
  and on ItemRental(status, user_id)
- StatsController is now @Transactional(readOnly = true)
- Disable spring.jpa.show-sql

Co-Authored-By: Claude Opus 4.7 <noreply@anthropic.com>